Changelog
=========

0.1dev (unreleased)
----------------------

- Made the keywords source work off the newly provided Oracle database table.
  Keyword searches work against both fields in the table.
  [David]
- BaseQuerySource searchs can now work with multiple PKs, multiple search terms,
  can work with exact or inexact searches, and are currently case insensitive
  [David]
- Refactored the keywords vocabulary into something with a more relevant name.
  This module and class still needs adjustment to work off a database.
  [David]
- Making a QuerySource from our grants records and basing this off our 
  BaseQuerySource for extensibility.
  [David]
- Adding basic SA wrapper for the research services database - this still needs
  refactoring
  [David]
- Adding Products.SQLAlchemyDA as a dependency on package
  [David]
- Customising widget for keywords -- this may be refactored out into another
  package and released on pypi.
  [David]
- Created basic types for dataset record and metadata repository
  [David]
- Initial release