@@ -1,4 +1,5 @@
 #A package
 
 from tdh.metadata.sources.activities import ActivitiesQuerySourceFactory
-from tdh.metadata.sources.research_keywords import ResearchKeywordQuerySourceFactory
+from tdh.metadata.sources.research_keywords import \
+        ResearchKeywordQuerySourceFactory
