@@ -5,20 +5,21 @@ from z3c.sqlalchemy.mapper import MappedClassBase
 from tdh.metadata import config, utils
 from tdh.metadata.sources.base import BaseQuerySource
 
-
+TABLE_DB_CONNECTION = config.DB_CONNECTIONS['research-services']
 TABLE_NAME = 'GRANTS_PUBLIC'
-TABLE_NAME_ABSOLUTE = '%s.%s' % (config.DB_SCHEMA, TABLE_NAME)
+TABLE_NAME_ABSOLUTE = '%s.%s' % (TABLE_DB_CONNECTION['db-schema'], TABLE_NAME)
 
 class Activity(MappedClassBase):
     pass
 
-utils.createAndRegisterSAMapper(db_connector=config.DB_CONNECTOR,
-                                table_name=TABLE_NAME,
-                                db_schema=config.DB_SCHEMA,
-                                table_name_absolute=TABLE_NAME_ABSOLUTE,
-                                mapper_class=Activity,
-                                primary_keys=['app_id']
-                               )
+utils.createAndRegisterSAMapper(
+    db_connector=TABLE_DB_CONNECTION['db-connector-id'],
+    table_name=TABLE_NAME,
+    db_schema=TABLE_DB_CONNECTION['db-schema'],
+    table_name_absolute=TABLE_NAME_ABSOLUTE,
+    mapper_class=Activity,
+    primary_keys=['app_id']
+)
 
 class ActivitiesQuerySource(BaseQuerySource):
 
@@ -29,10 +30,11 @@ class ActivitiesQuerySource(BaseQuerySource):
 
 
 def ActivitiesQuerySourceFactory():
-    return ActivitiesQuerySource(db_connector=config.DB_CONNECTOR,
-                                 table_name_absolute=TABLE_NAME_ABSOLUTE,
-                                 value_field='app_id',
-                                 token_field='app_id',
-                                 title_field='short_title',
-                                 query_limit=5,
-                                )
+    return ActivitiesQuerySource(
+        db_connector=TABLE_DB_CONNECTION['db-connector-id'],
+        table_name_absolute=TABLE_NAME_ABSOLUTE,
+        value_field='app_id',
+        token_field='app_id',
+        title_field='short_title',
+        query_limit=5,
+    )
