@@ -5,20 +5,21 @@ from z3c.sqlalchemy.mapper import MappedClassBase
 from tdh.metadata import config, utils
 from tdh.metadata.sources.base import BaseQuerySource
 
-
+TABLE_DB_CONNECTION = config.DB_CONNECTIONS['research-services']
 TABLE_NAME = 'LU_KEYWORDS'
-TABLE_NAME_ABSOLUTE = '%s.%s' % (config.DB_SCHEMA, TABLE_NAME)
+TABLE_NAME_ABSOLUTE = '%s.%s' % (TABLE_DB_CONNECTION['db-schema'], TABLE_NAME)
 
 class ResearchKeyword(MappedClassBase):
     pass
 
-utils.createAndRegisterSAMapper(db_connector=config.DB_CONNECTOR,
-                                table_name=TABLE_NAME,
-                                db_schema=config.DB_SCHEMA,
-                                table_name_absolute=TABLE_NAME_ABSOLUTE,
-                                mapper_class=ResearchKeyword,
-                                primary_keys=['keycode'],
-                               )
+utils.createAndRegisterSAMapper(
+    db_connector=TABLE_DB_CONNECTION['db-connector-id'],
+    table_name=TABLE_NAME,
+    db_schema=TABLE_DB_CONNECTION['db-schema'],
+    table_name_absolute=TABLE_NAME_ABSOLUTE,
+    mapper_class=ResearchKeyword,
+    primary_keys=['keycode'],
+)
 
 
 class ResearchKeywordQuerySource(BaseQuerySource):
@@ -30,11 +31,12 @@ class ResearchKeywordQuerySource(BaseQuerySource):
 
 
 def ResearchKeywordQuerySourceFactory():
-    return ResearchKeywordQuerySource(db_connector=config.DB_CONNECTOR,
-                                      table_name_absolute=TABLE_NAME_ABSOLUTE,
-                                      value_field='keycode',
-                                      token_field='keycode',
-                                      title_field='keyword',
-                                      query_fields=['keycode', 'keyword'],
-                                      query_limit=5,
-                                     )
+    return ResearchKeywordQuerySource(
+        db_connector=TABLE_DB_CONNECTION['db-connector-id'],
+        table_name_absolute=TABLE_NAME_ABSOLUTE,
+        value_field='keycode',
+        token_field='keycode',
+        title_field=None, #This gets computed above
+        query_fields=['keycode', 'keyword'],
+        query_limit=5,
+     )
